tests/nested_type_unknown_member_bad.stderr
tests/nested_type_unknown_member_bad.hop:9:8: error: HOP2003: unknown type
