tests/nested_type_unknown_member_bad.hop
// Verifies nested type unknown member is rejected.
struct Thing {
	struct Item {
		x i64
	}
}

fn main() {
	var x Thing.Missing
	_ = x
}
